--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "bin": {},
+  "scripts": {
+     "prepublish": "node_modules/.bin/babel src -d dist"
+  },
   "dependencies": {
     "commander": "^2.9.0",
     "js-yaml": "^3.6.1",
@@ -10,5 +13,8 @@
     "ramda": "^0.21.0",
     "semaphore-api": "^1.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0"
+  }
 }
