--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "docker-semaphore",
   "version": "0.0.0",
   "private": true,
+  "files" : [ "bin", "dist" ],
   "bin": {
      "semaphore" : "bin/semaphore-cli.js"
   },
