uses unsafe perm flag to install the bundle
* armhf raises an error for this step, unlike to amd64

> Error: could not get uid/gid
> [ 'nobody', 0 ]
>  at /usr/local/lib/node_modules/npm/node_modules/uid-number/uid-number.js:37:16

--- a/contrib/mechanic/Dockerfile
+++ b/contrib/mechanic/Dockerfile
@@ -8,8 +8,8 @@ RUN        useradd -m -s /bin/bash -u 1000 -U mechanic
 
 COPY       docker-semaphore-*.tgz /tmp
 
-RUN        npm install -g /tmp/docker-semaphore-*.tgz \
- &&        rm             /tmp/docker-semaphore-*.tgz
+RUN        npm install --unsafe-perm -g /tmp/docker-semaphore-*.tgz \
+ &&        rm                           /tmp/docker-semaphore-*.tgz
 
 VOLUME     /usr/local/src
 
