adds skip cleanup to prevent unnecessary trace logs
* node_modules reset takes quite a long time

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ after_script:
 - docker images
 
 deploy:
+  skip_cleanup: true
   script: sudo -E bash .travis/deploy.sh
   provider: script
   on:
