creates a index file that links the compiled versions
* cli shouldn't know the exact implementation; we might want to branch es5/es2015 in a later step

--- a/contrib/mechanic/package.json
+++ b/contrib/mechanic/package.json
@@ -6,6 +6,7 @@
   "bin": {
      "semaphore" : "bin/semaphore-cli.js"
   },
+  "main": "index.js",
   "scripts": {
      "prepublish": "node_modules/.bin/babel src -d dist"
   },
