--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ env:
     - REPOSITORY="encodeering"
     - BRANCH="$TRAVIS_BRANCH"
   matrix:
-    - ARCH=armhf VERSION=0.1.0
-    - ARCH=amd64 VERSION=0.1.0
+    - BASE=debian ARCH=armhf VERSION=0.1.0
+    - BASE=debian ARCH=amd64 VERSION=0.1.0
 
 install:
 - bash <(curl https://raw.githubusercontent.com/encodeering/docker-ci/master/install.sh) 0.1.5
